unpackaged/main/default/objects/Opportunity/fields/Lost_To__c.field-meta.xml
<CustomField>
    <fullName>Lost_To__c</fullName>
    <label>Lost To</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adyen</fullName>
            </value>
            <value>
                <fullName>Applepay</fullName>
            </value>
            <value>
                <fullName>Banca Sella</fullName>
            </value>
            <value>
                <fullName>Cardtronics</fullName>
            </value>
            <value>
                <fullName>Cerfa</fullName>
            </value>
            <value>
                <fullName>ConCardis</fullName>
            </value>
            <value>
                <fullName>Detaxe SA</fullName>
            </value>
            <value>
                <fullName>Elavon</fullName>
            </value>
            <value>
                <fullName>Euro Free Shopping</fullName>
            </value>
            <value>
                <fullName>Euronet</fullName>
            </value>
            <value>
                <fullName>EuroNet/Pure Commerce</fullName>
            </value>
            <value>
                <fullName>Euronet Worldwide</fullName>
            </value>
            <value>
                <fullName>Eurorefund</fullName>
            </value>
            <value>
                <fullName>Eurotaxfree</fullName>
            </value>
            <value>
                <fullName>EU TaxFree</fullName>
            </value>
            <value>
                <fullName>Fexco</fullName>
            </value>
            <value>
                <fullName>Fexco/Global Payment</fullName>
            </value>
            <value>
                <fullName>Fexco/Omnipay</fullName>
            </value>
            <value>
                <fullName>First Data</fullName>
            </value>
            <value>
                <fullName>GB Tax Free</fullName>
            </value>
            <value>
                <fullName>Global Blue</fullName>
            </value>
            <value>
                <fullName>Global Blue/Currency Select</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Hi Sky</fullName>
            </value>
            <value>
                <fullName>Innova</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>MONEX Financial Services</fullName>
            </value>
            <value>
                <fullName>Money</fullName>
            </value>
            <value>
                <fullName>Natixis</fullName>
            </value>
            <value>
                <fullName>New Tax Free Vat Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>