unpackaged/main/default/objects/Opportunity/fields/Manager_s_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Manager_s_Email_Address__c</fullName>
    <description>Changing label from Manager&#39;s Email Address -&gt; to Opportunity Approver&#39;s Email Address to capture Opportunity Approver&#39;s email address - Saurabh 06/10/21</description>
    <label>Opportunity Approver&#39;s Email Address</label>
    <type>Email</type>
</CustomField>