unpackaged/main/default/objects/Opportunity/fields/Marketing_B2C_Income1__c.field-meta.xml
<CustomField>
    <fullName>Marketing_B2C_Income1__c</fullName>
    <label>Marketing/B2C Income</label>
    <summarizedField>Additional_Service__c.Total__c</summarizedField>
    <summaryForeignKey>Additional_Service__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>