unpackaged/main/default/objects/Opportunity/fields/Marketing_B2C_Income__c.field-meta.xml
<CustomField>
    <fullName>Marketing_B2C_Income__c</fullName>
    <label>Marketing/B2C Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>