unpackaged/main/default/objects/Opportunity/fields/Marketing_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Requirements__c</fullName>
    <label>Marketing Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>