unpackaged/main/default/objects/Opportunity/fields/Markup__c.field-meta.xml
<CustomField>
    <fullName>Markup__c</fullName>
    <label>Markup %</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>