unpackaged/main/default/objects/Opportunity/fields/Match_Rate_Part_of_Total__c.field-meta.xml
<CustomField>
    <fullName>Match_Rate_Part_of_Total__c</fullName>
    <formula>TF_Match_Rate__c * ( TF_Annual_Vouchers__c /  Parent_Opportunity__r.All_Forms__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Match Rate % Part of Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>