unpackaged/main/default/objects/Opportunity/fields/Monthly_Service_Charge__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Service_Charge__c</fullName>
    <label>Monthly Service Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>