unpackaged/main/default/objects/Opportunity/fields/Net_Commission__c.field-meta.xml
<CustomField>
    <fullName>Net_Commission__c</fullName>
    <formula>(Rate__c - 0.014)/2* Adjusted_SiS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>