unpackaged/main/default/objects/Opportunity/fields/No_Of_Subscription_Fees__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Subscription_Fees__c</fullName>
    <description>Shows the number of subscription fees records attached to a particular opportunity.</description>
    <label>No_Of_Subscription_Fees</label>
    <summaryForeignKey>Subscription_Fees__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>