unpackaged/main/default/objects/Opportunity/fields/Number_of_Terminals__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Terminals__c</fullName>
    <label>Number of Terminals</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>