unpackaged/main/default/objects/Opportunity/fields/One_Off_Cost_Opportunity_Value__c.field-meta.xml
<CustomField>
    <fullName>One_Off_Cost_Opportunity_Value__c</fullName>
    <formula>Total_One_Off_Charges__c + Total_Hardware_One_Off_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>One Off Cost Opportunity Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>