unpackaged/main/default/objects/Opportunity/fields/Opp_vs_Actual_FY_Variance__c.field-meta.xml
<CustomField>
    <fullName>Opp_vs_Actual_FY_Variance__c</fullName>
    <formula>(Account.TF_Net_Commission_Financial_Year__c /  TF_Annual_Net_Commission1__c) - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp vs Actual FY Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>