unpackaged/main/default/objects/Opportunity/fields/Opportunity_Country__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Country__c</fullName>
    <label>Opportunity Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Argentina</fullName>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
            <value>
                <fullName>Bolivia</fullName>
            </value>
            <value>
                <fullName>Brazil</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Chile</fullName>
            </value>
            <value>
                <fullName>Colombia</fullName>
            </value>
            <value>
                <fullName>Costa Rica</fullName>
            </value>
            <value>
                <fullName>Cyprus</fullName>
            </value>
            <value>
                <fullName>Czech Republic</fullName>
            </value>
            <value>
                <fullName>Denmark</fullName>
            </value>
            <value>
                <fullName>El Salvador</fullName>
            </value>
            <value>
                <fullName>Equador</fullName>
            </value>
            <value>
                <fullName>Faroe Islands</fullName>
            </value>
            <value>
                <fullName>Finland</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Greece</fullName>
            </value>
            <value>
                <fullName>Guatemala</fullName>
            </value>
            <value>
                <fullName>Honduras</fullName>
            </value>
            <value>
                <fullName>Hungary</fullName>
            </value>
            <value>
                <fullName>Iceland</fullName>
            </value>
            <value>
                <fullName>Ireland</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>Latvia</fullName>
            </value>
            <value>
                <fullName>Lithuania</fullName>
            </value>
            <value>
                <fullName>Luxembourg</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>Netherlands</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>