unpackaged/main/default/objects/Opportunity/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <description>temp field added by Tim M</description>
    <label>Opportunity_Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>