unpackaged/main/default/objects/Opportunity/fields/Opportunity_Value__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Value__c</fullName>
    <formula>TF_Annual_Net_Commission1__c + DCC_Annual_Gross_Profit1__c +  Net_Commission__c + Payments_Annual_GP__c +  Pay_by_Link_Annual_GP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>