unpackaged/main/default/objects/Opportunity/fields/Opportunity_Weighted_Value__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Weighted_Value__c</fullName>
    <formula>Opportunity_Value__c *  Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Weighted Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>