unpackaged/main/default/objects/Opportunity/fields/OpportunityIDx18__c.field-meta.xml
<CustomField>
    <fullName>OpportunityIDx18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OpportunityIDx18</label>
    <type>Text</type>
</CustomField>