unpackaged/main/default/objects/Opportunity/fields/Oppty_vs_Actual_Variance__c.field-meta.xml
<CustomField>
    <fullName>Oppty_vs_Actual_Variance__c</fullName>
    <formula>(Annual_Net_Commission__c /  TF_Annual_Net_Commission1__c) - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oppty vs Actual Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>