unpackaged/main/default/objects/Opportunity/fields/Opt_in__c.field-meta.xml
<CustomField>
    <fullName>Opt_in__c</fullName>
    <description>DCC Calculation</description>
    <inlineHelpText>how much eligible is converted</inlineHelpText>
    <label>Opt-in %</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>