unpackaged/main/default/objects/Opportunity/fields/Overall_GP__c.field-meta.xml
<CustomField>
    <fullName>Overall_GP__c</fullName>
    <formula>(DCC_Annual_Gross_Profit1__c + Payments_Annual_GP__c) / Payments_Annual_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall GP %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>