unpackaged/main/default/objects/Opportunity/fields/Pain_Points__c.field-meta.xml
<CustomField>
    <fullName>Pain_Points__c</fullName>
    <label>Pain Points</label>
    <type>TextArea</type>
</CustomField>