unpackaged/main/default/objects/Opportunity/fields/Pan_Euro_Opp_Value__c.field-meta.xml
<CustomField>
    <fullName>Pan_Euro_Opp_Value__c</fullName>
    <formula>All_Annual_Gross_Profit__c + All_Annual_Net_Commission__c + All_Additional_Income__c + All_Payments_Annual_GP__c + All_Pay_by_Link_Annual_GP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pan Euro Opp Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>