unpackaged/main/default/objects/Opportunity/fields/Parent_Opportunity_Owning_Country__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opportunity_Owning_Country__c</fullName>
    <formula>Parent_Opportunity__r.Owning_Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Opportunity Owning Country</label>
    <type>Text</type>
</CustomField>