unpackaged/main/default/objects/Opportunity/fields/Parent_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opportunity_Type__c</fullName>
    <formula>Parent_Opportunity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Opportunity Type</label>
    <type>Text</type>
</CustomField>