unpackaged/main/default/objects/Opportunity/fields/Parent_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record_Type_Name__c</fullName>
    <description>Used in pan euro total value flow</description>
    <formula>Parent_Opportunity__c/*r.RecordType.Name*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Record Type Name</label>
    <type>Text</type>
</CustomField>