unpackaged/main/default/objects/Opportunity/fields/Part_AMEX__c.field-meta.xml
<CustomField>
    <fullName>Part_AMEX__c</fullName>
    <formula>AMEX__c * (Payments_Annual_Value__c / Parent_Opportunity__r.All_Payments_Annual_Value__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part AMEX %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>