unpackaged/main/default/objects/Opportunity/fields/Part_Union_Pay_of_Total__c.field-meta.xml
<CustomField>
    <fullName>Part_Union_Pay_of_Total__c</fullName>
    <formula>Union_Pay_of_Total__c * (Payments_Annual_Value__c / Parent_Opportunity__r.All_Payments_Annual_Value__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part Union Pay % of Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>