unpackaged/main/default/objects/Opportunity/fields/Part_Variable_Fee_Per_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Part_Variable_Fee_Per_Transaction__c</fullName>
    <formula>Variable_Fee_Per_Transaction__c * (Alipay_WeChat_Pay_Annual_Value__c / Parent_Opportunity__r.All_Alipay_WeChat_Pay_Annual_Value__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part Variable Fee Per Transaction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>