unpackaged/main/default/objects/Opportunity/fields/Part_VISA_MC_Domestic_EEA__c.field-meta.xml
<CustomField>
    <fullName>Part_VISA_MC_Domestic_EEA__c</fullName>
    <formula>VISA_MC_Domestic_EEA__c * (Payments_Annual_Value__c / Parent_Opportunity__r.All_Payments_Annual_Value__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part VISA/MC Domestic/EEA %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>