unpackaged/main/default/objects/Opportunity/fields/Part_WeChat__c.field-meta.xml
<CustomField>
    <fullName>Part_WeChat__c</fullName>
    <formula>WeChat__c  * (Payments_Annual_Value__c / Parent_Opportunity__r.All_Payments_Annual_Value__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part WeChat %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>