unpackaged/main/default/objects/Opportunity/fields/Pay_by_Link__c.field-meta.xml
<CustomField>
    <fullName>Pay_by_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pay by Link</label>
    <type>Checkbox</type>
</CustomField>