unpackaged/main/default/objects/Opportunity/fields/Pay_by_Link_Annual_GP__c.field-meta.xml
<CustomField>
    <fullName>Pay_by_Link_Annual_GP__c</fullName>
    <formula>Alipay_WeChat_Pay_Annual_Value__c * (Variable_Fee_Per_Transaction__c - Payment_Card_Charge__r.Chinese_Wallets_e_Comm__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pay by Link Annual GP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>