unpackaged/main/default/objects/Opportunity/fields/Pay_by_Link_Transaction_Fee__c.field-meta.xml
<CustomField>
    <fullName>Pay_by_Link_Transaction_Fee__c</fullName>
    <label>Pay by Link Fixed Transaction Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>