unpackaged/main/default/objects/Opportunity/fields/Payment_Annual_Value__c.field-meta.xml
<CustomField>
    <fullName>Payment_Annual_Value__c</fullName>
    <label>Payment Annual Value (m)</label>
    <summarizedField>Acquiring_Fees__c.Acquiring_Volume__c</summarizedField>
    <summaryForeignKey>Acquiring_Fees__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>