unpackaged/main/default/objects/Opportunity/fields/Payment_Card_Charge__c.field-meta.xml
<CustomField>
    <fullName>Payment_Card_Charge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Card Charge</label>
    <referenceTo>Payment_Card_Charge__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>