unpackaged/main/default/objects/Opportunity/fields/Payment_Terms_Details__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Details__c</fullName>
    <label>Payment Terms : Details</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Double Sale</fullName>
            </value>
            <value>
                <fullName>Single Sale</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>