unpackaged/main/default/objects/Opportunity/fields/Payments_Annual_GP__c.field-meta.xml
<CustomField>
    <fullName>Payments_Annual_GP__c</fullName>
    <label>Payments Annual GP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>