unpackaged/main/default/objects/Opportunity/fields/Payments_Annual_Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Payments_Annual_Gross_Profit__c</fullName>
    <formula>(Payments_Annual_Value__c * VISA_MC_Intl_of_Total__c * VISA_MC_Intl__c) + (Payments_Annual_Value__c * VISA_MC_Domestic_EEA_of_Total__c * VISA_MC_Domestic_EEA__c) + (Payments_Annual_Value__c * Union_Pay_of_Total__c * Union_Pay__c) + (Payments_Annual_Value__c * AMEX_of_Total__c * AMEX__c) + 
(Payments_Annual_Value__c * Alipay_of_Total__c * Alipay__c) + 
(Payments_Annual_Value__c * WeChat_of_Total__c * WeChat__c) + 
(Payments_Annual_Value__c * JCB_of_Total__c * JCB__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payments: Annual Gross Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>