unpackaged/main/default/objects/Opportunity/fields/Payments_FY_GP__c.field-meta.xml
<CustomField>
    <fullName>Payments_FY_GP__c</fullName>
    <formula>IF(Contract_Start_Date__c &lt; DATE(YEAR(TODAY()),01,01), Payments_Annual_GP__c * FY15__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payments: FY GP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>