unpackaged/main/default/objects/Opportunity/fields/Planet__c.field-meta.xml
<CustomField>
    <fullName>Planet__c</fullName>
    <formula>&quot;Planet&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planet</label>
    <type>Text</type>
</CustomField>