unpackaged/main/default/objects/Opportunity/fields/Planet_Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Planet_Gross_Profit__c</fullName>
    <formula>Converted_DCC_Volume__c * Planet_Margin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total DCC Profit old</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>