unpackaged/main/default/objects/Opportunity/fields/POS_Capex_Required__c.field-meta.xml
<CustomField>
    <fullName>POS_Capex_Required__c</fullName>
    <label>POS Capex Required</label>
    <summarizedField>Proposed_Asset__c.Total_Cost__c</summarizedField>
    <summaryForeignKey>Proposed_Asset__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>