unpackaged/main/default/objects/Opportunity/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>TF</fullName>
            </value>
            <value>
                <fullName>DCC</fullName>
            </value>
            <value>
                <fullName>DCC &amp; Payments</fullName>
                <label>DCC &amp; Payments (Acquiring)</label>
            </value>
            <value>
                <fullName>TF &amp; DCC</fullName>
            </value>
            <value>
                <fullName>TF &amp; DCC &amp; Payments</fullName>
            </value>
            <value>
                <fullName>Wirecard</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Gateway</fullName>
            </value>
            <value>
                <fullName>Acquiring and Gateway</fullName>
            </value>
            <value>
                <fullName>Acquiring &amp; TF</fullName>
            </value>
            <value>
                <fullName>Gateway &amp; TF</fullName>
            </value>
            <value>
                <fullName>Acquiring &amp; Gateway &amp; TF</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
            <value>
                <fullName>Gateway &amp; DCC</fullName>
            </value>
            <value>
                <fullName>Acquiring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>