unpackaged/main/default/objects/Opportunity/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>e-Taxfree</fullName>
            </value>
            <value>
                <fullName>e-Taxfree &amp; e-Invoice</fullName>
            </value>
            <value>
                <fullName>e-Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>