unpackaged/main/default/objects/Opportunity/fields/Ranking__c.field-meta.xml
<CustomField>
    <fullName>Ranking__c</fullName>
    <label>Ranking</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>