unpackaged/main/default/objects/Opportunity/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <inlineHelpText>The Rate should not be below 2%.  If the Rate is below 2% the opportunity will need approval.</inlineHelpText>
    <label>Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>